# pilotapp

./: .gitignore  LICENSE  README.md
pilotapp/: .gitignore  CMakeLists.txt  home.cpp  home.h  main.cpp  resources.qrc
pilotapp/Source/: MainWindow.cpp  MainWindow.h  main.cpp  style.qss  virtualkeyboard.qml
pilotapp/Source/Backend/: boatKernel.cpp  boatKernel.h  logManager.cpp  logManager.h
pilotapp/Source/Backend/Boat Kernel/: boatKernel.cpp  boatKernel.h
pilotapp/Source/Backend/Communication/: communicationManager.cpp  communicationManager.h  communicationThread.cpp  communicationThread.h  dataManager.cpp  dataManager.h
pilotapp/Source/Backend/Display Control/: displayControlEventFilter.cpp  displayControlEventFilter.h
pilotapp/Source/Backend/Preferences/: preferencesManager.cpp  preferencesManager.h
pilotapp/Source/Backend/Utilities/: utilities.cpp  utilities.h
pilotapp/Source/Custom/RangeSlider/: RangeSlider.cpp  RangeSlider.h
pilotapp/Source/Custom/TouchInputWidgets/TouchNumericalLineEdit/: touchNumericalLineEdit.cpp  touchNumericalLineEdit.h
pilotapp/Source/Custom/TouchKeypad/: touchKeypad.cpp  touchKeypad.h
pilotapp/Source/Utilities/: utilities.cpp  utilities.h
pilotapp/Source/Utilities/Communication/: communicationManager.cpp  communicationManager.h  communicationThread.cpp  communicationThread.h  dataManager.cpp  dataManager.h
pilotapp/Source/Widgets/Pages/Home/: homePage.cpp  homePage.h
pilotapp/Source/Widgets/Widgets/LeftContentSlate/: leftContentSlate.cpp  leftContentSlate.h
pilotapp/Source/Widgets/Widgets/MainContentSlate/: contentWidget.cpp  contentWidget.h  mainContentSlate.cpp  mainContentSlate.h
pilotapp/Source/Widgets/Widgets/MainContentSlate/ContentWidgets/Environment/: environmentWidget.cpp  environmentWidget.h
pilotapp/Source/Widgets/Widgets/MainContentSlate/ContentWidgets/Map/: mapSettingsWidget.cpp  mapSettingsWidget.h  mapView.qml  mapWidget.cpp  mapWidget.h
pilotapp/Source/Widgets/Widgets/MainContentSlate/ContentWidgets/Power/: powerWidget.cpp  powerWidget.h
pilotapp/Source/Widgets/Widgets/MainContentSlate/ContentWidgets/Screen/: screenWidget.cpp  screenWidget.h
pilotapp/Source/Widgets/Widgets/MainContentSlate/ContentWidgets/Settings/: settingsWidget.cpp  settingsWidget.h
pilotapp/Source/Widgets/Widgets/MainContentSlate/ContentWidgets/Settings/SettingsContentWidgets/Logs/: settingsLogsWidget.cpp  settingsLogsWidget.h
pilotapp/Source/Widgets/Widgets/MainContentSlate/ContentWidgets/Settings/SettingsContentWidgets/Options/: settingsOptionsWidget.cpp  settingsOptionsWidget.h
pilotapp/Source/Widgets/Widgets/MainContentSlate/ContentWidgets/Telemetry/: telemetryWidget.cpp  telemetryWidget.h
pilotapp/Source/Widgets/Widgets/MainContentSlate/ContentWidgets/Voice/: voiceWidget.cpp  voiceWidget.h
pilotapp/Source/Widgets/Widgets/Toolbar/: toolbar.cpp  toolbar.h
pilotapp/cmake/: FindArcGISRuntime.cmake
